# DeepRL_Gothic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install_windows.ps1  main.py  requirements.txt
agents/: ppo_agent.py
data_collection/: record_human.py
envs/: gothic_screen_env.py  grid_env_v1.py  grid_env_v2.py
generators/: scenario_generator.py
plugins/Perception/Space_Perception/: CMakeLists.txt
plugins/Perception/Space_Perception/Perception/: dllmain.cpp  pch.h
testing/: rollout_gothic.py  test_runner.py
testing/scenarios/: all_test_scenarios.yml
training/: runner.py  train_gothic_cnn_ppo.py
training/scenarios/: all_scenarios.yml  grid_5x5_obstacles.yml
utils/: build_action_map.py  input_control.py  screen_capture.py  text_targeting.py  vision.py  window_capture.py
vision/: cnn_bc.py
